// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`views/AddMeeting.vue button can be disable or enabled 1`] = `
<div class="add-meeting">
  <div class="add-meeting__container">
    <h1>Add meeting</h1>
    <div class="add-meeting__wrapper">
      <div class="add-meeting__field"><label for="email">
          Choose person to meet
        </label> <select id="email" data-testid="emailInput" class="add-meeting__input">
          <option value="" selected="selected" data-testid="predefinedEmailOption"></option>
          <option data-testid="predefinedEmailOption">
            test
          </option>
          <option data-testid="predefinedEmailOption">
            Example Person1
          </option>
          <option data-testid="predefinedEmailOption">
            Example Person2
          </option>
        </select></div>
      <div class="checkbox add-meeting__field"><label for="predefined">
          Predefined?
        </label> <input id="predefined" type="checkbox" data-testid="predefinedCheckbox"></div>
    </div>
    <div class="add-meeting__wrapper"><label for="meetingDate">
        Meeting date
      </label> <input id="meetingDate" data-testid="meetingDateInput" type="date" min="2000-01-01" class="add-meeting__input"></div>
    <div class="add-meeting__action-wrapper"><button data-testid="addMeetingButton" disabled="disabled" class="add-meeting__button">
        Save meeting
      </button>
      <p data-testid="generalErrorMessage" class="add-meeting__error">
        You've got a problem in form
      </p>
    </div>
  </div>
  <div class="message" style="display: none;">
    <h2>

    </h2>
  </div>
</div>
`;

exports[`views/AddMeeting.vue button can be disable or enabled 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -21,16 +21,14 @@
          </label> <input id=\\"predefined\\" type=\\"checkbox\\" data-testid=\\"predefinedCheckbox\\"></div>
      </div>
      <div class=\\"add-meeting__wrapper\\"><label for=\\"meetingDate\\">
          Meeting date
        </label> <input id=\\"meetingDate\\" data-testid=\\"meetingDateInput\\" type=\\"date\\" min=\\"2000-01-01\\" class=\\"add-meeting__input\\"></div>
-     <div class=\\"add-meeting__action-wrapper\\"><button data-testid=\\"addMeetingButton\\" disabled=\\"disabled\\" class=\\"add-meeting__button\\">
+     <div class=\\"add-meeting__action-wrapper\\"><button data-testid=\\"addMeetingButton\\" class=\\"add-meeting__button\\">
          Save meeting
        </button>
-       <p data-testid=\\"generalErrorMessage\\" class=\\"add-meeting__error\\">
-         You've got a problem in form
-       </p>
+       <!---->
      </div>
    </div>
    <div class=\\"message\\" style=\\"display: none;\\">
      <h2>
"
`;

exports[`views/AddMeeting.vue can add meeting to store 1`] = `
<div class="add-meeting add-meeting--loading">
  <div class="add-meeting__container">
    <h1>Add meeting</h1>
    <div class="add-meeting__wrapper">
      <div class="add-meeting__field"><label for="email">
          Choose person to meet
        </label> <select id="email" data-testid="emailInput" class="add-meeting__input">
          <option value="" selected="selected" data-testid="predefinedEmailOption"></option>
        </select></div>
      <div class="checkbox add-meeting__field"><label for="predefined">
          Predefined?
        </label> <input id="predefined" type="checkbox" data-testid="predefinedCheckbox"></div>
    </div>
    <div class="add-meeting__wrapper"><label for="meetingDate">
        Meeting date
      </label> <input id="meetingDate" data-testid="meetingDateInput" type="date" min="2000-01-01" class="add-meeting__input"></div>
    <div class="add-meeting__action-wrapper"><button data-testid="addMeetingButton" disabled="disabled" class="add-meeting__button">
        Save meeting
      </button>
      <p data-testid="generalErrorMessage" class="add-meeting__error">
        You've got a problem in form
      </p>
    </div>
  </div>
  <div class="message" style="display: none;">
    <h2>

    </h2>
  </div>
</div>
`;

exports[`views/AddMeeting.vue can add meeting to store 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,27 +1,23 @@
- <div class=\\"add-meeting add-meeting--loading\\">
+ <div class=\\"add-meeting\\">
    <div class=\\"add-meeting__container\\">
      <h1>Add meeting</h1>
      <div class=\\"add-meeting__wrapper\\">
        <div class=\\"add-meeting__field\\"><label for=\\"email\\">
            Choose person to meet
-         </label> <select id=\\"email\\" data-testid=\\"emailInput\\" class=\\"add-meeting__input\\">
-           <option value=\\"\\" selected=\\"selected\\" data-testid=\\"predefinedEmailOption\\"></option>
-         </select></div>
+         </label> <input id=\\"email\\" data-testid=\\"emailInput\\" type=\\"text\\" placeholder=\\"Email address\\" class=\\"add-meeting__input\\"></div>
        <div class=\\"checkbox add-meeting__field\\"><label for=\\"predefined\\">
            Predefined?
          </label> <input id=\\"predefined\\" type=\\"checkbox\\" data-testid=\\"predefinedCheckbox\\"></div>
      </div>
      <div class=\\"add-meeting__wrapper\\"><label for=\\"meetingDate\\">
          Meeting date
        </label> <input id=\\"meetingDate\\" data-testid=\\"meetingDateInput\\" type=\\"date\\" min=\\"2000-01-01\\" class=\\"add-meeting__input\\"></div>
-     <div class=\\"add-meeting__action-wrapper\\"><button data-testid=\\"addMeetingButton\\" disabled=\\"disabled\\" class=\\"add-meeting__button\\">
+     <div class=\\"add-meeting__action-wrapper\\"><button data-testid=\\"addMeetingButton\\" class=\\"add-meeting__button\\">
          Save meeting
        </button>
-       <p data-testid=\\"generalErrorMessage\\" class=\\"add-meeting__error\\">
-         You've got a problem in form
-       </p>
+       <!---->
      </div>
    </div>
    <div class=\\"message\\" style=\\"display: none;\\">
      <h2>
"
`;

exports[`views/AddMeeting.vue can add meeting to store 3`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -10,17 +10,19 @@
          </label> <input id=\\"predefined\\" type=\\"checkbox\\" data-testid=\\"predefinedCheckbox\\"></div>
      </div>
      <div class=\\"add-meeting__wrapper\\"><label for=\\"meetingDate\\">
          Meeting date
        </label> <input id=\\"meetingDate\\" data-testid=\\"meetingDateInput\\" type=\\"date\\" min=\\"2000-01-01\\" class=\\"add-meeting__input\\"></div>
-     <div class=\\"add-meeting__action-wrapper\\"><button data-testid=\\"addMeetingButton\\" class=\\"add-meeting__button\\">
+     <div class=\\"add-meeting__action-wrapper\\"><button data-testid=\\"addMeetingButton\\" class=\\"add-meeting__button\\" disabled=\\"disabled\\">
          Save meeting
        </button>
-       <!---->
+       <p data-testid=\\"generalErrorMessage\\" class=\\"add-meeting__error\\">
+         You've got a problem in form
+       </p>
      </div>
    </div>
-   <div class=\\"message\\" style=\\"display: none;\\">
+   <div class=\\"message message--success\\" style=\\"\\">
      <h2>
-
+       Successfully added a new meeting
      </h2>
    </div>
  </div>"
`;

exports[`views/AddMeeting.vue can set custom meeting day in form 1`] = `
<div class="add-meeting">
  <div class="add-meeting__container">
    <h1>Add meeting</h1>
    <div class="add-meeting__wrapper">
      <div class="add-meeting__field"><label for="email">
          Choose person to meet
        </label> <select id="email" data-testid="emailInput" class="add-meeting__input">
          <option value="" selected="selected" data-testid="predefinedEmailOption"></option>
          <option data-testid="predefinedEmailOption">
            test
          </option>
          <option data-testid="predefinedEmailOption">
            Example Person1
          </option>
          <option data-testid="predefinedEmailOption">
            Example Person2
          </option>
        </select></div>
      <div class="checkbox add-meeting__field"><label for="predefined">
          Predefined?
        </label> <input id="predefined" type="checkbox" data-testid="predefinedCheckbox"></div>
    </div>
    <div class="add-meeting__wrapper"><label for="meetingDate">
        Meeting date
      </label> <input id="meetingDate" data-testid="meetingDateInput" type="date" min="2000-01-01" class="add-meeting__input"></div>
    <div class="add-meeting__action-wrapper"><button data-testid="addMeetingButton" disabled="disabled" class="add-meeting__button">
        Save meeting
      </button>
      <p data-testid="generalErrorMessage" class="add-meeting__error">
        You've got a problem in form
      </p>
    </div>
  </div>
  <div class="message" style="display: none;">
    <h2>

    </h2>
  </div>
</div>
`;

exports[`views/AddMeeting.vue can set custom meeting day in form 2`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`views/AddMeeting.vue default form is rendered 1`] = `
<div class="add-meeting add-meeting--loading">
  <div class="add-meeting__container">
    <h1>Add meeting</h1>
    <div class="add-meeting__wrapper">
      <div class="add-meeting__field"><label for="email">
          Choose person to meet
        </label> <select id="email" data-testid="emailInput" class="add-meeting__input">
          <option value="" selected="selected" data-testid="predefinedEmailOption"></option>
        </select></div>
      <div class="checkbox add-meeting__field"><label for="predefined">
          Predefined?
        </label> <input id="predefined" type="checkbox" data-testid="predefinedCheckbox"></div>
    </div>
    <div class="add-meeting__wrapper"><label for="meetingDate">
        Meeting date
      </label> <input id="meetingDate" data-testid="meetingDateInput" type="date" min="2000-01-01" class="add-meeting__input"></div>
    <div class="add-meeting__action-wrapper"><button data-testid="addMeetingButton" disabled="disabled" class="add-meeting__button">
        Save meeting
      </button>
      <p data-testid="generalErrorMessage" class="add-meeting__error">
        You've got a problem in form
      </p>
    </div>
  </div>
  <div class="message" style="display: none;">
    <h2>

    </h2>
  </div>
</div>
`;

exports[`views/AddMeeting.vue error is showed when form is invalid 1`] = `
<div class="add-meeting add-meeting--loading">
  <div class="add-meeting__container">
    <h1>Add meeting</h1>
    <div class="add-meeting__wrapper">
      <div class="add-meeting__field"><label for="email">
          Choose person to meet
        </label> <select id="email" data-testid="emailInput" class="add-meeting__input">
          <option value="" selected="selected" data-testid="predefinedEmailOption"></option>
        </select></div>
      <div class="checkbox add-meeting__field"><label for="predefined">
          Predefined?
        </label> <input id="predefined" type="checkbox" data-testid="predefinedCheckbox"></div>
    </div>
    <div class="add-meeting__wrapper"><label for="meetingDate">
        Meeting date
      </label> <input id="meetingDate" data-testid="meetingDateInput" type="date" min="2000-01-01" class="add-meeting__input"></div>
    <div class="add-meeting__action-wrapper"><button data-testid="addMeetingButton" disabled="disabled" class="add-meeting__button">
        Save meeting
      </button>
      <p data-testid="generalErrorMessage" class="add-meeting__error">
        You've got a problem in form
      </p>
    </div>
  </div>
  <div class="message" style="display: none;">
    <h2>

    </h2>
  </div>
</div>
`;

exports[`views/AddMeeting.vue error is showed when form is invalid 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -15,13 +15,11 @@
          Meeting date
        </label> <input id=\\"meetingDate\\" data-testid=\\"meetingDateInput\\" type=\\"date\\" min=\\"2000-01-01\\" class=\\"add-meeting__input\\"></div>
      <div class=\\"add-meeting__action-wrapper\\"><button data-testid=\\"addMeetingButton\\" disabled=\\"disabled\\" class=\\"add-meeting__button\\">
          Save meeting
        </button>
-       <p data-testid=\\"generalErrorMessage\\" class=\\"add-meeting__error\\">
-         You've got a problem in form
-       </p>
+       <!---->
      </div>
    </div>
    <div class=\\"message\\" style=\\"display: none;\\">
      <h2>
"
`;

exports[`views/AddMeeting.vue has loading class when form is blocked 1`] = `
<div class="add-meeting add-meeting--loading">
  <div class="add-meeting__container">
    <h1>Add meeting</h1>
    <div class="add-meeting__wrapper">
      <div class="add-meeting__field"><label for="email">
          Choose person to meet
        </label> <select id="email" data-testid="emailInput" class="add-meeting__input">
          <option value="" selected="selected" data-testid="predefinedEmailOption"></option>
        </select></div>
      <div class="checkbox add-meeting__field"><label for="predefined">
          Predefined?
        </label> <input id="predefined" type="checkbox" data-testid="predefinedCheckbox"></div>
    </div>
    <div class="add-meeting__wrapper"><label for="meetingDate">
        Meeting date
      </label> <input id="meetingDate" data-testid="meetingDateInput" type="date" min="2000-01-01" class="add-meeting__input"></div>
    <div class="add-meeting__action-wrapper"><button data-testid="addMeetingButton" disabled="disabled" class="add-meeting__button">
        Save meeting
      </button>
      <p data-testid="generalErrorMessage" class="add-meeting__error">
        You've got a problem in form
      </p>
    </div>
  </div>
  <div class="message" style="display: none;">
    <h2>

    </h2>
  </div>
</div>
`;

exports[`views/AddMeeting.vue has loading class when form is blocked 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,13 +1,22 @@
- <div class=\\"add-meeting add-meeting--loading\\">
+ <div class=\\"add-meeting\\">
    <div class=\\"add-meeting__container\\">
      <h1>Add meeting</h1>
      <div class=\\"add-meeting__wrapper\\">
        <div class=\\"add-meeting__field\\"><label for=\\"email\\">
            Choose person to meet
          </label> <select id=\\"email\\" data-testid=\\"emailInput\\" class=\\"add-meeting__input\\">
            <option value=\\"\\" selected=\\"selected\\" data-testid=\\"predefinedEmailOption\\"></option>
+           <option data-testid=\\"predefinedEmailOption\\">
+             test
+           </option>
+           <option data-testid=\\"predefinedEmailOption\\">
+             Example Person1
+           </option>
+           <option data-testid=\\"predefinedEmailOption\\">
+             Example Person2
+           </option>
          </select></div>
        <div class=\\"checkbox add-meeting__field\\"><label for=\\"predefined\\">
            Predefined?
          </label> <input id=\\"predefined\\" type=\\"checkbox\\" data-testid=\\"predefinedCheckbox\\"></div>
      </div>"
`;

exports[`views/AddMeeting.vue predefined addreses are available 1`] = `
<div class="add-meeting add-meeting--loading">
  <div class="add-meeting__container">
    <h1>Add meeting</h1>
    <div class="add-meeting__wrapper">
      <div class="add-meeting__field"><label for="email">
          Choose person to meet
        </label> <select id="email" data-testid="emailInput" class="add-meeting__input">
          <option value="" selected="selected" data-testid="predefinedEmailOption"></option>
        </select></div>
      <div class="checkbox add-meeting__field"><label for="predefined">
          Predefined?
        </label> <input id="predefined" type="checkbox" data-testid="predefinedCheckbox"></div>
    </div>
    <div class="add-meeting__wrapper"><label for="meetingDate">
        Meeting date
      </label> <input id="meetingDate" data-testid="meetingDateInput" type="date" min="2000-01-01" class="add-meeting__input"></div>
    <div class="add-meeting__action-wrapper"><button data-testid="addMeetingButton" disabled="disabled" class="add-meeting__button">
        Save meeting
      </button>
      <p data-testid="generalErrorMessage" class="add-meeting__error">
        You've got a problem in form
      </p>
    </div>
  </div>
  <div class="message" style="display: none;">
    <h2>

    </h2>
  </div>
</div>
`;

exports[`views/AddMeeting.vue predefined addreses are available 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,13 +1,22 @@
- <div class=\\"add-meeting add-meeting--loading\\">
+ <div class=\\"add-meeting\\">
    <div class=\\"add-meeting__container\\">
      <h1>Add meeting</h1>
      <div class=\\"add-meeting__wrapper\\">
        <div class=\\"add-meeting__field\\"><label for=\\"email\\">
            Choose person to meet
          </label> <select id=\\"email\\" data-testid=\\"emailInput\\" class=\\"add-meeting__input\\">
            <option value=\\"\\" selected=\\"selected\\" data-testid=\\"predefinedEmailOption\\"></option>
+           <option data-testid=\\"predefinedEmailOption\\">
+             test
+           </option>
+           <option data-testid=\\"predefinedEmailOption\\">
+             Example Person1
+           </option>
+           <option data-testid=\\"predefinedEmailOption\\">
+             Example Person2
+           </option>
          </select></div>
        <div class=\\"checkbox add-meeting__field\\"><label for=\\"predefined\\">
            Predefined?
          </label> <input id=\\"predefined\\" type=\\"checkbox\\" data-testid=\\"predefinedCheckbox\\"></div>
      </div>"
`;

exports[`views/AddMeeting.vue predefined checkbox toggle fields and clear values 1`] = `
<div class="add-meeting">
  <div class="add-meeting__container">
    <h1>Add meeting</h1>
    <div class="add-meeting__wrapper">
      <div class="add-meeting__field"><label for="email">
          Choose person to meet
        </label> <select id="email" data-testid="emailInput" class="add-meeting__input">
          <option value="" selected="selected" data-testid="predefinedEmailOption"></option>
          <option data-testid="predefinedEmailOption">
            test
          </option>
          <option data-testid="predefinedEmailOption">
            Example Person1
          </option>
          <option data-testid="predefinedEmailOption">
            Example Person2
          </option>
        </select></div>
      <div class="checkbox add-meeting__field"><label for="predefined">
          Predefined?
        </label> <input id="predefined" type="checkbox" data-testid="predefinedCheckbox"></div>
    </div>
    <div class="add-meeting__wrapper"><label for="meetingDate">
        Meeting date
      </label> <input id="meetingDate" data-testid="meetingDateInput" type="date" min="2000-01-01" class="add-meeting__input"></div>
    <div class="add-meeting__action-wrapper"><button data-testid="addMeetingButton" disabled="disabled" class="add-meeting__button">
        Save meeting
      </button>
      <p data-testid="generalErrorMessage" class="add-meeting__error">
        You've got a problem in form
      </p>
    </div>
  </div>
  <div class="message" style="display: none;">
    <h2>

    </h2>
  </div>
</div>
`;

exports[`views/AddMeeting.vue predefined checkbox toggle fields and clear values 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -2,22 +2,11 @@
    <div class=\\"add-meeting__container\\">
      <h1>Add meeting</h1>
      <div class=\\"add-meeting__wrapper\\">
        <div class=\\"add-meeting__field\\"><label for=\\"email\\">
            Choose person to meet
-         </label> <select id=\\"email\\" data-testid=\\"emailInput\\" class=\\"add-meeting__input\\">
-           <option value=\\"\\" selected=\\"selected\\" data-testid=\\"predefinedEmailOption\\"></option>
-           <option data-testid=\\"predefinedEmailOption\\">
-             test
-           </option>
-           <option data-testid=\\"predefinedEmailOption\\">
-             Example Person1
-           </option>
-           <option data-testid=\\"predefinedEmailOption\\">
-             Example Person2
-           </option>
-         </select></div>
+         </label> <input id=\\"email\\" data-testid=\\"emailInput\\" type=\\"text\\" placeholder=\\"Email address\\" class=\\"add-meeting__input\\"></div>
        <div class=\\"checkbox add-meeting__field\\"><label for=\\"predefined\\">
            Predefined?
          </label> <input id=\\"predefined\\" type=\\"checkbox\\" data-testid=\\"predefinedCheckbox\\"></div>
      </div>
      <div class=\\"add-meeting__wrapper\\"><label for=\\"meetingDate\\">"
`;

exports[`views/AddMeeting.vue predefined checkbox toggle fields and clear values 3`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`views/AddMeeting.vue predefined checkbox toggle fields and clear values 4`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -2,11 +2,22 @@
    <div class=\\"add-meeting__container\\">
      <h1>Add meeting</h1>
      <div class=\\"add-meeting__wrapper\\">
        <div class=\\"add-meeting__field\\"><label for=\\"email\\">
            Choose person to meet
-         </label> <input id=\\"email\\" data-testid=\\"emailInput\\" type=\\"text\\" placeholder=\\"Email address\\" class=\\"add-meeting__input\\"></div>
+         </label> <select id=\\"email\\" data-testid=\\"emailInput\\" class=\\"add-meeting__input\\">
+           <option value=\\"\\" selected=\\"selected\\" data-testid=\\"predefinedEmailOption\\"></option>
+           <option data-testid=\\"predefinedEmailOption\\">
+             test
+           </option>
+           <option data-testid=\\"predefinedEmailOption\\">
+             Example Person1
+           </option>
+           <option data-testid=\\"predefinedEmailOption\\">
+             Example Person2
+           </option>
+         </select></div>
        <div class=\\"checkbox add-meeting__field\\"><label for=\\"predefined\\">
            Predefined?
          </label> <input id=\\"predefined\\" type=\\"checkbox\\" data-testid=\\"predefinedCheckbox\\"></div>
      </div>
      <div class=\\"add-meeting__wrapper\\"><label for=\\"meetingDate\\">"
`;

exports[`views/AddMeeting.vue predefined select change value to selected option 1`] = `
<div class="add-meeting">
  <div class="add-meeting__container">
    <h1>Add meeting</h1>
    <div class="add-meeting__wrapper">
      <div class="add-meeting__field"><label for="email">
          Choose person to meet
        </label> <select id="email" data-testid="emailInput" class="add-meeting__input">
          <option value="" selected="selected" data-testid="predefinedEmailOption"></option>
          <option data-testid="predefinedEmailOption">
            test
          </option>
          <option data-testid="predefinedEmailOption">
            Example Person1
          </option>
          <option data-testid="predefinedEmailOption">
            Example Person2
          </option>
        </select></div>
      <div class="checkbox add-meeting__field"><label for="predefined">
          Predefined?
        </label> <input id="predefined" type="checkbox" data-testid="predefinedCheckbox"></div>
    </div>
    <div class="add-meeting__wrapper"><label for="meetingDate">
        Meeting date
      </label> <input id="meetingDate" data-testid="meetingDateInput" type="date" min="2000-01-01" class="add-meeting__input"></div>
    <div class="add-meeting__action-wrapper"><button data-testid="addMeetingButton" disabled="disabled" class="add-meeting__button">
        Save meeting
      </button>
      <p data-testid="generalErrorMessage" class="add-meeting__error">
        You've got a problem in form
      </p>
    </div>
  </div>
  <div class="message" style="display: none;">
    <h2>

    </h2>
  </div>
</div>
`;

exports[`views/AddMeeting.vue predefined select change value to selected option 2`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;
